@@ -1475,7 +1475,7 @@ static void lpc214x_dispatchrequest(struct lpc214x_usbdev_s *priv,
     {
       /* Forward to the control request to the class driver implementation */
 
-      ret = CLASS_SETUP(priv->driver, &priv->usbdev, ctrl);
+      ret = CLASS_SETUP(priv->driver, &priv->usbdev, ctrl, NULL, 0);
       if (ret < 0)
         {
           /* Stall on failure */
