@@ -132,7 +132,8 @@ static void   usbmsc_unbind(FAR struct usbdevclass_driver_s *driver,
                 FAR struct usbdev_s *dev);
 static int    usbmsc_setup(FAR struct usbdevclass_driver_s *driver,
                 FAR struct usbdev_s *dev,
-                FAR const struct usb_ctrlreq_s *ctrl);
+                FAR const struct usb_ctrlreq_s *ctrl, FAR uint8_t *dataout,
+                size_t outlen);
 static void   usbmsc_disconnect(FAR struct usbdevclass_driver_s *driver,
                 FAR struct usbdev_s *dev);
 
@@ -501,7 +502,8 @@ static void usbmsc_unbind(FAR struct usbdevclass_driver_s *driver,
 
 static int usbmsc_setup(FAR struct usbdevclass_driver_s *driver,
                         FAR struct usbdev_s *dev,
-                        FAR const struct usb_ctrlreq_s *ctrl)
+                        FAR const struct usb_ctrlreq_s *ctrl,
+                        FAR uint8_t *dataout, size_t outlen)
 {
   FAR struct usbmsc_dev_s *priv;
   FAR struct usbdev_req_s *ctrlreq;
